k8s/local-kms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-kms
  namespace: pezzo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-kms
  template:
    metadata:
      labels:
        app: local-kms
    spec:
      containers:
      - name: local-kms
        image: nsmithuk/local-kms:latest
        ports:
        - containerPort: 9981
        volumeMounts:
        - name: local-kms-seed
          mountPath: /init/seed.yaml
          subPath: seed.yaml
      volumes:
      - name: local-kms-seed
        configMap:
          name: local-kms-seed
---
apiVersion: v1
kind: Service
metadata:
  name: local-kms
  namespace: pezzo
spec:
  selector:
    app: local-kms
  ports:
  - port: 9981
    targetPort: 9981
