k8s/pezzo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pezzo-server
  namespace: pezzo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pezzo-server
  template:
    metadata:
      labels:
        app: pezzo-server
    spec:
      imagePullSecrets:
        - name: acr
      containers:
      - name: pezzo-server
        # image: ghcr.io/pezzolabs/pezzo/server:latest
        image: sentencelabs.azurecr.io/pezzo-server:latest
        imagePullPolicy: Always
        # Alternatively, you can use the build context from the original docker-compose
        # You would need to build and push this image to a registry first
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: pezzo-server
  namespace: pezzo
spec:
  selector:
    app: pezzo-server
  ports:
  - port: 3000
    targetPort: 3000
