k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-stack-server
  namespace: pezzo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-stack-server
  template:
    metadata:
      labels:
        app: redis-stack-server
    spec:
      containers:
      - name: redis-stack-server
        image: redis/redis-stack-server:7.2.0-v0
        ports:
        - containerPort: 6379
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 1
          periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stack-server
  namespace: pezzo
spec:
  selector:
    app: redis-stack-server
  ports:
  - port: 6379
    targetPort: 6379
