k8s/supertokens.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supertokens
  namespace: pezzo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supertokens
  template:
    metadata:
      labels:
        app: supertokens
    spec:
      containers:
      - name: supertokens
        image: supertokens/supertokens-postgresql:5.0
        ports:
        - containerPort: 3567
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - |
              exec 3<>/dev/tcp/127.0.0.1/3567 && echo -e "GET /hello HTTP/1.1\r\nhost: 127.0.0.1:3567\r\nConnection: close\r\n\r\n" >&3 && cat <&3 | grep "Hello"
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: supertokens
  namespace: pezzo
spec:
  selector:
    app: supertokens
  ports:
  - port: 3567
    targetPort: 3567
